discussion/kv_engine/126024/126024_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38673: Privilege based visibility for get_scope/collection id

Update get_scope_id and get_collection_id to check that the
current user has any access to the scope or collection.

Change-Id: I4a20c791284a12d66741254da006541f923362e7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-04-22 09:22:48.000000000
Message: 
Uploaded patch set 8: Patch Set 7 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-22 10:36:31.000000000
Message: 
Patch Set 8: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1869/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:20:2: error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
#error "Please include memcached/engine.h instead"
 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/protocol_binary.h:2211:5: warning: single-argument constructors must be marked explicit to avoid unintentional implicit conversions [google-explicit-constructor]
    GetCollectionIDPayload(uint64_t manifestId)
    ^
    explicit 
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/protocol_binary.h:2238:5: warning: single-argument constructors must be marked explicit to avoid unintentional implicit conversions [google-explicit-constructor]
    GetScopeIDPayload(uint64_t manifestId) : manifestId(htonll(manifestId)) {
    ^
    explicit 

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1869/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:20:2:
error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1869/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11158/ : FAILURE

Failure of a CTest test [2020-04-22T10:26:38.801Z] 205/384 Test #139: ep-engine_ep_unit_tests.AllBucketTypes/DurabilityActiveStreamTest ........................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11158/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3288/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3288/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27713/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/388/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23698/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3305/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2354/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3368/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2020-04-22 15:43:35.000000000
Message: 
Patch Set 8: Code-Review-1

(1 comment)
----------------------------------------------------------------------------------------------------------------------
